# serializer version: 1
# name: test_all_entities[weather.aemet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.aemet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'aemet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '40.30403754--3.72935236',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[weather.aemet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by AEMET OpenData',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AEMET',
      <WeatherEntityStateAttribute.HUMIDITY: 'humidity'>: 99,
      <WeatherEntityStateAttribute.PRECIPITATION_UNIT: 'precipitation_unit'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      <WeatherEntityStateAttribute.PRESSURE: 'pressure'>: 1004.4,
      <WeatherEntityStateAttribute.PRESSURE_UNIT: 'pressure_unit'>: <UnitOfPressure.HPA: 'hPa'>,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WeatherEntityFeature: 3>,
      <WeatherEntityStateAttribute.TEMPERATURE: 'temperature'>: -0.7,
      <WeatherEntityStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
      <WeatherEntityStateAttribute.VISIBILITY_UNIT: 'visibility_unit'>: <UnitOfLength.KILOMETERS: 'km'>,
      <WeatherEntityStateAttribute.WIND_BEARING: 'wind_bearing'>: 122.0,
      <WeatherEntityStateAttribute.WIND_GUST_SPEED: 'wind_gust_speed'>: 12.2,
      <WeatherEntityStateAttribute.WIND_SPEED: 'wind_speed'>: 3.2,
      <WeatherEntityStateAttribute.WIND_SPEED_UNIT: 'wind_speed_unit'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.aemet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'snowy',
  })
# ---
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.aemet': dict({
      'forecast': list([
        dict({
          'condition': 'snowy',
          'datetime': '2021-01-08T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 2.0,
          'templow': -1.0,
          'wind_bearing': 90.0,
          'wind_speed': 0.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-09T23:00:00+00:00',
          'precipitation_probability': 30,
          'temperature': 4.0,
          'templow': -4.0,
          'wind_bearing': 45.0,
          'wind_speed': 20.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-10T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 3.0,
          'templow': -7.0,
          'wind_bearing': 0.0,
          'wind_speed': 5.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-11T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': -1.0,
          'templow': -13.0,
          'wind_bearing': None,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2021-01-12T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 6.0,
          'templow': -11.0,
          'wind_bearing': None,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-13T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 6.0,
          'templow': -7.0,
          'wind_bearing': None,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-14T23:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 5.0,
          'templow': -4.0,
          'wind_bearing': None,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].1
  dict({
    'weather.aemet': dict({
      'forecast': list([
        dict({
          'condition': 'snowy',
          'datetime': '2021-01-09T12:00:00+00:00',
          'precipitation': 2.7,
          'precipitation_probability': 100,
          'temperature': 0.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 22.0,
          'wind_speed': 15.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2021-01-09T13:00:00+00:00',
          'precipitation': 0.6,
          'precipitation_probability': 100,
          'temperature': 0.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 24.0,
          'wind_speed': 14.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2021-01-09T14:00:00+00:00',
          'precipitation': 0.8,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 20.0,
          'wind_speed': 10.0,
        }),
        dict({
          'condition': 'snowy',
          'datetime': '2021-01-09T15:00:00+00:00',
          'precipitation': 1.4,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 14.0,
          'wind_speed': 8.0,
        }),
        dict({
          'condition': 'snowy',
          'datetime': '2021-01-09T16:00:00+00:00',
          'precipitation': 1.2,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 13.0,
          'wind_speed': 9.0,
        }),
        dict({
          'condition': 'snowy',
          'datetime': '2021-01-09T17:00:00+00:00',
          'precipitation': 0.4,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 90.0,
          'wind_gust_speed': 13.0,
          'wind_speed': 7.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2021-01-09T18:00:00+00:00',
          'precipitation': 0.3,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 12.0,
          'wind_speed': 8.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2021-01-09T19:00:00+00:00',
          'precipitation': 0.1,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 135.0,
          'wind_gust_speed': 12.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-09T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 90.0,
          'wind_gust_speed': 8.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-09T21:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 9.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-09T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 100,
          'temperature': 1.0,
          'wind_bearing': 90.0,
          'wind_gust_speed': 11.0,
          'wind_speed': 8.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-09T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 12.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'fog',
          'datetime': '2021-01-10T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 0.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 10.0,
          'wind_speed': 5.0,
        }),
        dict({
          'condition': 'fog',
          'datetime': '2021-01-10T01:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 0.0,
          'wind_bearing': 0.0,
          'wind_gust_speed': 11.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'fog',
          'datetime': '2021-01-10T02:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 0.0,
          'wind_bearing': 0.0,
          'wind_gust_speed': 9.0,
          'wind_speed': 6.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T03:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': -1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 12.0,
          'wind_speed': 8.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T04:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': -1.0,
          'wind_bearing': 0.0,
          'wind_gust_speed': 11.0,
          'wind_speed': 5.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': -1.0,
          'wind_bearing': 0.0,
          'wind_gust_speed': 13.0,
          'wind_speed': 9.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T06:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': -2.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 18.0,
          'wind_speed': 13.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T07:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': -1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 25.0,
          'wind_speed': 17.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T08:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': -1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 31.0,
          'wind_speed': 21.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-10T09:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': 0.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 32.0,
          'wind_speed': 21.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-10T10:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 15,
          'temperature': 2.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 30.0,
          'wind_speed': 21.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 3.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 32.0,
          'wind_speed': 22.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 3.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 32.0,
          'wind_speed': 20.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T13:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 3.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 30.0,
          'wind_speed': 19.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T14:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 4.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 28.0,
          'wind_speed': 17.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T15:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 3.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 25.0,
          'wind_speed': 16.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T16:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 2.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 24.0,
          'wind_speed': 16.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-10T17:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 24.0,
          'wind_speed': 17.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-10T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 25.0,
          'wind_speed': 17.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T19:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 25.0,
          'wind_speed': 16.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 24.0,
          'wind_speed': 17.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T21:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 0.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 27.0,
          'wind_speed': 19.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': 0.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 30.0,
          'wind_speed': 21.0,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2021-01-10T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 30.0,
          'wind_speed': 19.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2021-01-11T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -1.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 27.0,
          'wind_speed': 16.0,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2021-01-11T01:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -2.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 22.0,
          'wind_speed': 12.0,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2021-01-11T02:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -2.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 17.0,
          'wind_speed': 10.0,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2021-01-11T03:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -3.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 15.0,
          'wind_speed': 11.0,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2021-01-11T04:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'temperature': -4.0,
          'wind_bearing': 45.0,
          'wind_gust_speed': 15.0,
          'wind_speed': 10.0,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2021-01-11T05:00:00+00:00',
          'precipitation_probability': None,
          'temperature': -4.0,
          'wind_bearing': 0.0,
          'wind_gust_speed': 15.0,
          'wind_speed': 10.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription[daily]
  list([
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-08T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 2.0,
      'templow': -1.0,
      'wind_bearing': 90.0,
      'wind_speed': 0.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T23:00:00+00:00',
      'precipitation_probability': 30,
      'temperature': 4.0,
      'templow': -4.0,
      'wind_bearing': 45.0,
      'wind_speed': 20.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 3.0,
      'templow': -7.0,
      'wind_bearing': 0.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-11T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': -1.0,
      'templow': -13.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-01-12T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 6.0,
      'templow': -11.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-13T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 6.0,
      'templow': -7.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-14T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 5.0,
      'templow': -4.0,
      'wind_bearing': None,
    }),
  ])
# ---
# name: test_forecast_subscription[daily].1
  list([
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-08T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 2.0,
      'templow': -1.0,
      'wind_bearing': 90.0,
      'wind_speed': 0.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T23:00:00+00:00',
      'precipitation_probability': 30,
      'temperature': 4.0,
      'templow': -4.0,
      'wind_bearing': 45.0,
      'wind_speed': 20.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 3.0,
      'templow': -7.0,
      'wind_bearing': 0.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-11T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': -1.0,
      'templow': -13.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-01-12T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 6.0,
      'templow': -11.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-13T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 6.0,
      'templow': -7.0,
      'wind_bearing': None,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-14T23:00:00+00:00',
      'precipitation_probability': 0,
      'temperature': 5.0,
      'templow': -4.0,
      'wind_bearing': None,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly]
  list([
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T12:00:00+00:00',
      'precipitation': 2.7,
      'precipitation_probability': 100,
      'temperature': 0.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 22.0,
      'wind_speed': 15.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T13:00:00+00:00',
      'precipitation': 0.6,
      'precipitation_probability': 100,
      'temperature': 0.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 14.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T14:00:00+00:00',
      'precipitation': 0.8,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 20.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T15:00:00+00:00',
      'precipitation': 1.4,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 14.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T16:00:00+00:00',
      'precipitation': 1.2,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 9.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T17:00:00+00:00',
      'precipitation': 0.4,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 7.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T18:00:00+00:00',
      'precipitation': 0.3,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T19:00:00+00:00',
      'precipitation': 0.1,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-09T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 8.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-09T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 9.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 10.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 9.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': -1.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 9.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T06:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 18.0,
      'wind_speed': 13.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T07:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T08:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 31.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T09:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': 2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 22.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T12:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 20.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T13:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 4.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 28.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T15:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T16:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T19:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 27.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-11T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 27.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 22.0,
      'wind_speed': 12.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 17.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 11.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -4.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T05:00:00+00:00',
      'precipitation_probability': None,
      'temperature': -4.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 10.0,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly].1
  list([
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T12:00:00+00:00',
      'precipitation': 2.7,
      'precipitation_probability': 100,
      'temperature': 0.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 22.0,
      'wind_speed': 15.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T13:00:00+00:00',
      'precipitation': 0.6,
      'precipitation_probability': 100,
      'temperature': 0.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 14.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T14:00:00+00:00',
      'precipitation': 0.8,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 20.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T15:00:00+00:00',
      'precipitation': 1.4,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 14.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T16:00:00+00:00',
      'precipitation': 1.2,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 9.0,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-01-09T17:00:00+00:00',
      'precipitation': 0.4,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 7.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T18:00:00+00:00',
      'precipitation': 0.3,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-01-09T19:00:00+00:00',
      'precipitation': 0.1,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 135.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-09T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 8.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-09T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 9.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 100,
      'temperature': 1.0,
      'wind_bearing': 90.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-09T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 10.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'fog',
      'datetime': '2021-01-10T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 0.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 9.0,
      'wind_speed': 6.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 12.0,
      'wind_speed': 8.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': -1.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 11.0,
      'wind_speed': 5.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 13.0,
      'wind_speed': 9.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T06:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 18.0,
      'wind_speed': 13.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T07:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T08:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 31.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T09:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 15,
      'temperature': 2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 22.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T12:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 32.0,
      'wind_speed': 20.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T13:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 4.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 28.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T15:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T16:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'temperature': 2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-10T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T19:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 25.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 24.0,
      'wind_speed': 17.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 27.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 0.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 21.0,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-01-10T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 30.0,
      'wind_speed': 19.0,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-01-11T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -1.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 27.0,
      'wind_speed': 16.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 22.0,
      'wind_speed': 12.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -2.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 17.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -3.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 11.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': -4.0,
      'wind_bearing': 45.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 10.0,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-01-11T05:00:00+00:00',
      'precipitation_probability': None,
      'temperature': -4.0,
      'wind_bearing': 0.0,
      'wind_gust_speed': 15.0,
      'wind_speed': 10.0,
    }),
  ])
# ---
